deployments/template-fastapi-app/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-fastapi-app
spec:
  selector:
    app: template-fastapi-app
  ports:
    - port: 5000
      targetPort: 5000
